<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="16.0dip"
    android:paddingRight="16.0dip">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/layout_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">
            <ImageView
                android:id="@+id/iv_shenxiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alman_monkey"
                android:layout_centerInParent="true" />
            <LinearLayout android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/ll_top"
                android:layout_width="wrap_content"
                android:layout_height="162.0dip"
                android:layout_centerHorizontal="true">
                <TextView
                    android:textSize="88.0dip"
                    android:textColor="@color/almanac_big_text"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/almanac_day" />
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tv_lunar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:text="@string/almanac_lunar"
                    style="@style/almanac_text3" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:id="@+id/ll_left"
                android:layout_width="wrap_content"
                android:layout_height="162.0dip"
                android:layout_alignParentLeft="true">
                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/tv_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gtime_week"
                    android:lineSpacingExtra="0.0dip"
                    style="@style/almanac_text3" />
                <TextView
                    android:gravity="top|center"
                    android:id="@+id/tv_weeknum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dip"
                    android:text="@string/gtime_week"
                    android:lineSpacingExtra="0.0dip"
                    style="@style/almanac_text3" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:id="@+id/ll_right"
                android:layout_width="wrap_content"
                android:layout_height="162.0dip"
                android:layout_alignParentRight="true">
                <TextView
                    android:gravity="top|center"
                    android:id="@+id/tv_acient_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gtime_acient_month"
                    android:lineSpacingExtra="0.0dip"
                    style="@style/almanac_text3" />
                <TextView
                    android:gravity="top|center"
                    android:id="@+id/tv_acient_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8.0dip"
                    android:text="@string/gtime_acient_month"
                    android:lineSpacingExtra="0.0dip"
                    style="@style/almanac_text3" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/background_almanac_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip">
            <View
                android:background="@color/almanac_line_a50"
                android:layout_width="fill_parent"
                android:layout_height="1.0px" />
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/ll_yi"
                android:paddingLeft="9.0dip"
                android:paddingRight="9.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18.0dip"
                android:layout_marginRight="12.0dip">
                <ImageView
                    android:id="@+id/img_yi"
                    android:background="@drawable/ic_yi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/tv_yi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:lineSpacingExtra="1.0dip"
                    style="@style/almanac_text2" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="9.0dip"
                android:paddingRight="9.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.0dip"
                android:layout_marginRight="12.0dip"
                android:layout_marginBottom="18.0dip">
                <ImageView
                    android:id="@+id/img_ji"
                    android:background="@drawable/ic_ji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/tv_ji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:lineSpacingExtra="1.0dip"
                    style="@style/almanac_text2" />
            </LinearLayout>
            <View
                android:background="@color/almanac_line_a50"
                android:layout_width="fill_parent"
                android:layout_height="1.0px" />
            <RelativeLayout
                android:gravity="center_vertical"
                android:id="@+id/layout_compass"
                android:background="@drawable/selector_list_bg"
                android:layout_width="fill_parent"
                android:layout_height="74.0dip">
                <RelativeLayout
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <RelativeLayout
                        android:orientation="horizontal"
                        android:id="@+id/ll_tip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8.0dip"
                        android:layout_marginTop="3.0dip"
                        android:layout_centerVertical="true">
                        <TextView
                            android:gravity="center"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about7"
                            style="@style/almanac_text1" />
                    </RelativeLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:paddingLeft="16.0dip"
                        android:paddingRight="16.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dip"
                        android:layout_below="@+id/ll_tip">
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_deity_fu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            style="@style/almanac_text2" />
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_deity_cai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            style="@style/almanac_text2" />
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_deity_sheng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            style="@style/almanac_text2" />
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_deity_xi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            style="@style/almanac_text2" />
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/almanac_list"
                android:layout_width="fill_parent"
                android:layout_height="128.0dip">
                <ImageView
                    android:background="@color/almanac_line_a50"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px" />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/almanac_left"
                    android:layout_width="100.0dip"
                    android:layout_height="128.0dip">
                    <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">
                        <TextView
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8.0dip"
                            android:text="@string/taishen"
                            style="@style/almanac_text1" />
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_taishen"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7.0dip"
                            style="@style/almanac_text2" />
                    </LinearLayout>
                    <ImageView
                        android:background="@color/almanac_line_a50"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px" />
                    <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">
                        <TextView
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8.0dip"
                            android:text="@string/about6"
                            style="@style/almanac_text1" />
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_xingxiu"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7.0dip"
                            style="@style/almanac_text2" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/almanac_right"
                    android:layout_width="100.0dip"
                    android:layout_height="128.0dip"
                    android:layout_alignParentRight="true">
                    <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">
                        <TextView
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8.0dip"
                            android:text="@string/about2"
                            style="@style/almanac_text1" />
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_chongsha"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7.0dip"
                            style="@style/almanac_text2" />
                    </LinearLayout>
                    <ImageView
                        android:background="@color/almanac_line_a50"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px" />
                    <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">
                        <TextView
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8.0dip"
                            android:text="@string/about3"
                            style="@style/almanac_text1" />
                        <TextView
                            android:gravity="center"
                            android:id="@+id/tv_wuxing"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7.0dip"
                            style="@style/almanac_text2" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:id="@+id/almanac_center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/almanac_right"
                    android:layout_toRightOf="@id/almanac_left">
                    <TextView
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.0dip"
                        android:text="@string/pengzu"
                        style="@style/almanac_text1" />
                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_pengzu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7.0dip"
                        android:lineSpacingExtra="1.0dip"
                        style="@style/almanac_text2" />
                </LinearLayout>
                <TextView
                    android:id="@+id/line3"
                    android:background="@color/almanac_line_a50"
                    android:layout_width="1.0px"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@id/almanac_left" />
                <TextView
                    android:id="@+id/line4"
                    android:background="@color/almanac_line_a50"
                    android:layout_width="1.0px"
                    android:layout_height="fill_parent"
                    android:layout_toLeftOf="@id/almanac_right" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
